durga@48demo.com.bleadtest/src/objects/DataImport_SavePoint__c.object
<CustomObject>
    <fields>
        <fullName>DS_FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_ImportedHistory__c</fullName>
        <label>ImportedHistory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_ImportedId__c</fullName>
        <label>ImportedId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_TotalRecords__c</fullName>
        <label>TotalRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>DataImport_SavePoint</relationshipLabel>
        <relationshipName>DataImport_SavePoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataImport_SavePoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DataImport_SavePoint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_id__c</columns>
        <columns>DS_FileName__c</columns>
        <columns>DS_ImportedHistory__c</columns>
        <columns>DS_ImportedId__c</columns>
        <columns>DS_TotalRecords__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS_{00000000}</displayFormat>
        <label>DS_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataImport_SavePoint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>